--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- SEO = Básico -->
-    <title></title>
+    <title>Control Dos</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -27,27 +27,40 @@
     <meta name="theme-color" content="#fafafa" />
   </head>
   <body>
-    <!-- *** ESTRUCTURA SEMÁNTICA *** -->
-    <!-- Header (encabezado de la página, zona superior) -->
+   <div class="container">
+
     <header>
-      <!-- nav (el navegador de toda la web) -->
-      <nav>
+      
+      <h1 class="logo">Uber</h1>
+      <nav class="menu">
         <a href="" class="link1">link1</a>
         <a href="" class="link2">link2</a>
         <a href="" class="link3">link3</a>
         <a href="" class="link4">link4</a>
       </nav>
+
+      <a class="boton_menu" href="#"gdgdgdg>join</a>
     </header>
-    <!-- Main (centro de la página, zona central) -->
+   
     <main>
-      <!-- section y article (posibilidades dentro de main) -->
+      <figure></figure>
+     <h1>AAAA</h1>
+     <h2>SSSSSS</h2>
+     <h3>SSSSSS</h3>
+     <form action="">
+       <input type="email" placeholder="e-mail">
+       <button>fffffff</button>
+     </form>
+     <a href="#"></a> <span>hhh</span>
     </main>
-    <!-- Footer (final de la página, zona inferior) -->
-    <footer>
+  </div>
+  
+  <!--
+  <footer>
       <h4>&copy;Copyright</h4>
     </footer>
 
-    <!-- *** Google Analytics *** -->
+    *** Google Analytics *** -->
     <script src="https://www.google-analytics.com/analytics.js" async></script>
   </body>
 </html>
