--- a/index.html
+++ b/index.html
@@ -33,25 +33,28 @@
       
       <h1 class="logo">Uber</h1>
       <nav class="menu">
-        <a href="" class="link1">link1</a>
-        <a href="" class="link2">link2</a>
-        <a href="" class="link3">link3</a>
-        <a href="" class="link4">link4</a>
+        <a  class="activo">Home</a>
+        <a href="" class="link2">Company</a>
+        <a href="" class="link3">Safety</a>
+        <a href="" class="link4">Help</a>
       </nav>
 
-      <a class="boton_menu" href="#"gdgdgdg>join</a>
+      <a class="boton_menu" href="#">join now</a>
     </header>
-   
+    
+
     <main>
-      <figure></figure>
-     <h1>AAAA</h1>
-     <h2>SSSSSS</h2>
-     <h3>SSSSSS</h3>
+      <figure class="main_imagen"><img src="img/desktop/Brazos.jpg" alt="Brazos"></figure>
+      <section class="main_texto">
+     <h1>On your mark</h1>
+     <h2>You're movig what matters</h2>
+     <h3>We are building new ways to support you.</h3>
      <form action="">
-       <input type="email" placeholder="e-mail">
+       <input type="email" placeholder="your Email">
        <button>fffffff</button>
      </form>
-     <a href="#"></a> <span>hhh</span>
+     <a href="#">hhhhh</a> 
+    </section>
     </main>
   </div>
   
